--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -2,5 +2,6 @@
     "editor.fontFamily": "FiraCode-Medium",
     "editor.codeActionsOnSave": {
         
-    }
+    },
+    "typescript.tsdk": "node_modules\\typescript\\lib"
 }
