--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "@tailwindcss/typography": "^0.5.15",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
+    "framer-motion": "^11.14.4",
     "lucide-react": "^0.460.0",
     "next": "^15.0.4-canary.45",
     "next-auth": "^5.0.0-beta.25",
