--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "react-dom": "19.0.0-rc-66855b96-20241106"
   },
   "dependencies": {
+    "@portabletext/react": "^3.2.0",
     "@radix-ui/react-slot": "^1.1.0",
     "@sanity/image-url": "^1.1.0",
     "@sanity/vision": "^3.65.1",
