--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "oncollos-store",
   "version": "0.1.0",
-  "private": false,
+  "private": true,
   "scripts": {
     "dev": "next dev",
     "build": "next build",
@@ -24,7 +24,7 @@
     "clsx": "^2.1.1",
     "framer-motion": "^11.14.4",
     "lucide-react": "^0.460.0",
-    "next": "^15.0.4-canary.45",
+    "next": "^15.2.0-canary.13",
     "next-auth": "^5.0.0-beta.25",
     "next-sanity": "^9.8.3-canary.1",
     "react": "19.0.0-rc-66855b96-20241106",
